@@ -72,7 +72,6 @@ public:
 	static std::string HashString(const std::string &ss);
 	static u_int HashBin(const char *s, const size_t size);
 
-	static std::string SanitizeFileName(const std::string &name);
 	static boost::filesystem::path GetCacheDir(const std::string &applicationName);
 
 private:
