@@ -62,6 +62,7 @@
 * Fixed a bug when using RTPATHOCL with multiple CUDA devices
 * Fixed a bug when using shadow transparency (for Path tracing)
 * Fixed a LuxCoreUI crash when GPU rendering is not available (pull request #406)
+* MacOS OpenCL/CUDA kernel cache directory is now created in user home directory to avoid to be erased when in /tmp
 
 Note: due to Glossycoating updated support for bump mapping on GPUs, some old scene using this kind of material/bump map combination may require some fix.
 
